--- a/ai-weather-app/public/index.html
+++ b/ai-weather-app/public/index.html
@@ -29,6 +29,14 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <footer class="footer">
+      <p>Designed and coded by Frontend Developer Tiffany Mackay.</p>
+      <p>© 2024 Tiffany Mackay</p>
+      <div class="footer-links">
+        <a href="https://github.com/tiffanymackay" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/tiffanylmackay" target="_blank">LinkedIn</a>
+      </div>
+    </footer>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
