--- a/public/index.html
+++ b/public/index.html
@@ -24,17 +24,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Weekly Weather App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+     <div class="container">
+         <img src="https://uploadkon.ir/uploads/077724_24logo.png" alt="Weather App Logo" class="logo" />
+        <h1>Weekly Weather Forecast</h1>
+       </div>
     <div id="root"></div>
     <footer class="footer">
-      <p>Designed and coded by Frontend Developer Tiffany Mackay.</p>
-      <p>© 2024 Tiffany Mackay</p>
+      <p>Designed and coded by Elahe.</p>
+      <p>👧🏽Elahe Hamidpour👧🏻</p>
       <div class="footer-links">
-        <a href="https://github.com/tiffanymackay" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/tiffanylmackay" target="_blank">LinkedIn</a>
+        <a href="https://github.com/elykh1993" target="_blank">GitHub</a>
+        <a href="https://ir.linkedin.com/in/elahe-hamidpour-ba150796" target="_blank">LinkedIn</a>
       </div>
     </footer>
     <!--
